<resources>
    <string name="app_name">Lyst</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="SignUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">ِEmail</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="loggedIn">You are logged in</string>
    <string name="signedUp">You successfully signed up</string>
    <string name="failedLogin">Unsuccessful login, Please check your info</string>
    <string name="password">Password</string>
    <string name="tempID">Template ID</string>
    <string name="myChecklist">My Checklist</string>
    <string name="myList">My Lists</string>
    <string name="followed">Followed</string>
    <string name="seen">Inbox</string>

    <string name="placeholder">{Place Holder}</string>
    <string name="listID">List ID</string>
    <string name="delete">Delete</string>
    <string name="search">Search Templates</string>

    <string name="submission_header">Submitted on %s by %s.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
